install-usb-gui (0.2.18) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * DO NOT RELEASE, before x-un-i check in new fll-installer

  [ Horst Tritremmel ]
  * checkbox do not format added
  * checkbox persist added
  * shorter name for the new checkboxes
  * tooltip's added to the checkboxes

  [ Stefan Lippers-Hollmann ]
  * bump standards version to 3.8.0, no changes necessary.

 -- Horst Tritremmel <hjt@sidux.com>  Tue, 10 Jun 2008 11:02:31 +0200

install-usb-gui (0.2.17) unstable; urgency=low

  * Remove install_fromiso_in_USB from source package.
  * Depend on fll-iso2usb.
  * Give package a sane long description.
  * Adjust variable name in install-usb-gui.bash to reflect new name of
    backend.

 -- Kel Modderman <kel@otaku42.de>  Mon, 12 May 2008 20:58:38 +1000

install-usb-gui (0.2.16) unstable; urgency=low

  * copy memtest86+.bin into the usb device, and make an entry in the grub

 -- Joaquim Boura <x-un-i@sidux.com>  Tue, 15 Apr 2008 22:45:03 +0200

install-usb-gui (0.2.15) unstable; urgency=low

  * fixed pt language file.

 -- Joaquim Boura <x-un-i@sidux.com>  Mon, 07 Apr 2008 22:45:48 +0200

install-usb-gui (0.2.14) unstable; urgency=low

  [ Kel Modderman ]
  * trap umount_partition partition function to ensure used mointpoints are
    cleaned up in event of failure.
  * If using script from environment other than stock live-cd, the iso media
    can be provided by cd media, if mount of cd fails, prompt for cd to be
    insterted.
  * If iso file chooser returned a value, use it if valid file or block
    device.
  * Return something from filechooser is running in toram mode, as well as
    installed mode.

  [ Horst Tritremmel ]
  * file_chooser default dir changed to /

 -- Horst Tritremmel <hjt@sidux.com>  Fri, 04 Apr 2008 11:34:05 +0200

install-usb-gui (0.2.13) unstable; urgency=low

  * Have a go at adding cdrom* and dvd* as gtk file chooser filters
    for iso -> usb install option.
