@@ -44,16 +44,16 @@
         </child>
         <child>
           <widget class="GtkLabel" id="label_device">
-            <property name="width_request">148</property>
+            <property name="width_request">140</property>
             <property name="height_request">32</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
             <property name="xalign">0</property>
-            <property name="label" translatable="yes">&lt;b&gt;USB Device&lt;/b&gt;</property>
+            <property name="label" translatable="yes">&lt;b&gt;USB Device:&lt;/b&gt;</property>
             <property name="use_markup">True</property>
           </widget>
           <packing>
-            <property name="x">5</property>
+            <property name="x">15</property>
             <property name="y">170</property>
           </packing>
         </child>
@@ -113,7 +113,7 @@
           </widget>
           <packing>
             <property name="x">445</property>
-            <property name="y">480</property>
+            <property name="y">500</property>
           </packing>
         </child>
         <child>
@@ -130,13 +130,14 @@
             <signal name="clicked" handler="gtk_main_quit"/>
           </widget>
           <packing>
-            <property name="y">480</property>
+            <property name="x">15</property>
+            <property name="y">500</property>
           </packing>
         </child>
         <child>
           <widget class="GtkLabel" id="label_iso">
             <property name="width_request">455</property>
-            <property name="height_request">32</property>
+            <property name="height_request">26</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
             <property name="xalign">0</property>
@@ -144,18 +145,20 @@
             <property name="use_markup">True</property>
           </widget>
           <packing>
-            <property name="y">404</property>
+            <property name="x">15</property>
+            <property name="y">429</property>
           </packing>
         </child>
         <child>
           <widget class="GtkFileChooserButton" id="filechooserbutton_iso">
-            <property name="width_request">594</property>
+            <property name="width_request">580</property>
             <property name="height_request">32</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
           </widget>
           <packing>
-            <property name="y">435</property>
+            <property name="x">15</property>
+            <property name="y">455</property>
           </packing>
         </child>
         <child>
@@ -240,39 +243,77 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkCheckButton" id="no_format_option">
-            <property name="width_request">150</property>
-            <property name="height_request">36</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="tooltip" translatable="yes">Do not format partition!</property>
-            <property name="label" translatable="yes">noformat</property>
-            <property name="use_underline">True</property>
-            <property name="response_id">0</property>
-            <property name="draw_indicator">True</property>
-          </widget>
-          <packing>
-            <property name="x">16</property>
-            <property name="y">370</property>
-          </packing>
-        </child>
-        <child>
           <widget class="GtkCheckButton" id="persist_option">
             <property name="width_request">150</property>
-            <property name="height_request">36</property>
+            <property name="height_request">32</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="tooltip" translatable="yes">Initializing persistent overlay file 
-using 50% of the available size.
-Persist wants at least 200MB free.</property>
+            <property name="has_tooltip">True</property>
+            <property name="tooltip" translatable="yes">persistance will be achieved on ext2/ext3 using all free space.
+When the device was formatted with vfat mostly 50% of the
+free space will be used for persistance.
+Natural limits are 2GB (as no file with a size greater than that
+is allowed on vfat) or 100MB as that does is of no use (too small) </property>
             <property name="label" translatable="yes">persist</property>
             <property name="use_underline">True</property>
             <property name="response_id">0</property>
             <property name="draw_indicator">True</property>
           </widget>
           <packing>
-            <property name="x">170</property>
-            <property name="y">370</property>
+            <property name="x">280</property>
+            <property name="y">378</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkLabel" id="label_device1">
+            <property name="width_request">104</property>
+            <property name="height_request">32</property>
+            <property name="visible">True</property>
+            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+            <property name="tooltip" translatable="yes">The device is formated (or not) with the choosen filesystem.
+When no filesystem formatting is performed,
+the first partition on the target device will be used as long as
+it is of ext2, ext3 or vfat filesystem type.
+When the device is formatted the choosed filesystem is used
+and a single partition will be created on the target device.
+Everything on the target device will be erased.</property>
+            <property name="xalign">0</property>
+            <property name="label" translatable="yes">&lt;b&gt;format:&lt;/b&gt;</property>
+            <property name="use_markup">True</property>
+          </widget>
+          <packing>
+            <property name="x">15</property>
+            <property name="y">378</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkHSeparator" id="hseparator2">
+            <property name="width_request">600</property>
+            <property name="height_request">20</property>
+            <property name="visible">True</property>
+          </widget>
+          <packing>
+            <property name="y">414</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkComboBox" id="combobox_format">
+            <property name="width_request">121</property>
+            <property name="height_request">32</property>
+            <property name="visible">True</property>
+            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+            <property name="tooltip" translatable="yes">The device is formated (or not) with the choosen filesystem.
+When no filesystem formatting is performed,
+the first partition on the target device will be used as long as
+it is of ext2, ext3 or vfat filesystem type.
+When the device is formatted the choosed filesystem is used
+and a single partition will be created on the target device.
+Everything on the target device will be erased.</property>
+            <property name="items" translatable="yes"></property>
+          </widget>
+          <packing>
+            <property name="x">117</property>
+            <property name="y">378</property>
           </packing>
         </child>
       </widget>
