@@ -8,11 +8,12 @@ install-usb-gui (0.2.18) UNRELEASED; urgency=low
   * checkbox persist added
   * shorter name for the new checkboxes
   * tooltip's added to the checkboxes
+  * s/format checkbox/format combobox/
 
   [ Stefan Lippers-Hollmann ]
   * bump standards version to 3.8.0, no changes necessary.
 
- -- Horst Tritremmel <hjt@sidux.com>  Tue, 10 Jun 2008 11:02:31 +0200
+ -- Horst Tritremmel <hjt@sidux.com>  Wed, 11 Jun 2008 12:23:08 +0200
 
 install-usb-gui (0.2.17) unstable; urgency=low
 
